<resources>
    <string name="app_name">Troops Hub</string>
    <string name="app">Troops Hub</string>
    <string name="usuario">User</string>
    <string name="seccion_1">Seccion1</string>
    <string name="seccion_2">Seccion2</string>
    <string name="seccion_3">Seccion3</string>
    <string name="otras_opciones">OtrasOpciones</string>
    <string name="opcion_1">Opcion1</string>
    <string name="opcion_2">Opcion2</string>
    <string name="title_activity_view_pager">HomeOrders</string>
    <string name="cont">Contenido</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sing_up">Sing Up</string>
    <string name="back"><![CDATA[< BACK]]></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="street_address">Street Address</string>
    <string name="unit_suite">Unit / Suite</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal">Postal</string>
    <string name="nro_cc">Nro CC</string>
    <string name="date_exp">Date Exp</string>
    <string name="billing_address">Billing Address</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Support">Support</string>
    <string name="AboutUs">About Us</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="streetsadd">Streets Address</string>
    <string name="unitesuit">Unite/Suite</string>
    <string name="postalcode">Postal Code</string>
    <string name="Cardlist">Card List</string>
    <string name="addcard">Add Card</string>
    <string name="NroCC">NroCC</string>
    <string name="DateExp">Date Exp</string>
    <string name="Billing">Billing Address</string>
    <string name="CVC">CVC</string>
    <string name="savecard">Save card future uses</string>
    <string name="Add">Add Card</string>
    <string name="Addres">Address</string>
    <string name="WebSite">Web Site</string>
    <string name="Phone">Phone</string>
    <string name="terms">Terms, Conditions and Privacy Policy</string>
    <string name="lorem">Lorem ipsu</string>
    <string name="Categories">Categories</string>
    <string name="Restaurant">Food Delivery</string>
    <string name="Currier">Currier</string>
    <string name="Laundry">Laundry</string>
    <string name="Groceries">Groceries</string>
    <string name="Pets">Pets</string>
    <string name="Hairstyle">HairStyle</string>
    <string name="Pharmacy">Pharmacy</string>
    <string name="Others">Others</string>
    <string name="description">Description</string>
    <string name="nameREst">Restaurant</string>
    <string name="restName">Restaurant Name</string>
    <string name="Dishesname">Dishes Name</string>
    <string name="Dishesprice">Dishes, Price and ingredients</string>
    <string name="checkout">Check out</string>
    <string name="addcar">Add Car</string>
    <string name="imagefood">Image Food</string>
    <string name="submit">SUBMIT ></string>
    <string name="next"><![CDATA[NEXT >]]></string>
    <string name="confiradd">Confirm Address</string>
    <string name="streetCheckout">Street Checkout</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="Subtotal">Order Sub Total</string>
    <string name="Subtotalprice">$00,0</string>
    <string name="Delivery">Delivery Free</string>
    <string name="Total">Total</string>
    <string name="Cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="orderinfo">Order Info</string>
    <string name="ordernro">Order Nro</string>
    <string name="Addorder">Address</string>
    <string name="dateHour">Date Hour</string>
    <string name="PickupAssigned">Pickup Assigned</string>
    <string name="namepickup">Jowel y Randy</string>
    <string name="orderstatus">Order Status</string>
    <string name="infoorder">The driver have the package and he is on the way</string>
    <string name="OrderDetail">Order Detail</string>
    <string name="ordercomplete">Day, Month and Year - Time</string>
    <string name="Rating">Rating</string>
</resources>
