<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icono" />

    <TextView
        android:id="@+id/Addres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map"
        android:layout_marginTop="8dp"
        android:text="@string/Addres"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/Website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Addres"
        android:layout_marginTop="8dp"
        android:text="@string/WebSite"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Website"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email"
        android:layout_marginTop="8dp"
        android:text="@string/Phone"
        android:textAlignment="center" />

    <Button
        android:id="@+id/Terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/terms"
        android:layout_below="@+id/Phone" />

</RelativeLayout>