<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/Home"/>
        <item
            android:id="@+id/Profile"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/Profile"/>
        <item
            android:id="@+id/Support"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/Support"/>

        <item
            android:id="@+id/AboutUs"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/AboutUs"/>
    </group>

    <!--<item-->
        <!--android:id="@+id/navigation_subheader"-->
        <!--android:title="@string/otras_opciones">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/menu_opcion_1"-->
                <!--android:icon="@android:drawable/ic_menu_add"-->
                <!--android:title="@string/opcion_1"/>-->
            <!--<item-->
                <!--android:id="@+id/menu_opcion_2"-->
                <!--android:icon="@android:drawable/ic_menu_add"-->
                <!--android:title="@string/opcion_2"/>-->
        <!--</menu>-->
    <!--</item>-->
</menu>