<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b2b2b"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/Rname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/restName"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="#fff" />


    <TextView
        android:id="@+id/confirmadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/confiradd"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/streetcheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/streetCheckout"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#fff"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/Unite_suite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/unitesuit"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#fff"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/city"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#fff"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/State"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/state"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#fff"

        android:orientation="horizontal" />


    <TextView
        android:id="@+id/codepostal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/postal"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#fff"
        android:orientation="horizontal" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:background="#8c8b8b">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/imageback"
            android:src="@android:drawable/ic_popup_reminder" />

        <TextView
            android:id="@+id/Dishesname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="@string/Dishesname"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/qty"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#fff" />


        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/price"
            android:textAppearance="@style/Base.TextAppearance.AppCompat"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/Subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/Subtotal"
            android:textColor="#fff" />


        <TextView
            android:id="@+id/Subtotalprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="25dp"
            android:layout_marginTop="200dp"
            android:text="@string/Subtotalprice"
            android:textColor="#fff" />


        <TextView
            android:id="@+id/Delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:text="@string/Delivery"
            android:textColor="#fff" />


        <TextView
            android:id="@+id/Deliveryprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="25dp"
            android:layout_marginTop="225dp"
            android:text="@string/Subtotalprice"
            android:textColor="#fff" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:background="#565656"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Total"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="bottom"
                android:text="@string/Total"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/Totalprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/Subtotalprice"
                android:textColor="#fff" />


        </FrameLayout>


    </FrameLayout>

    <FrameLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="15dp">

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="15dp"
            android:background="#d60c0c"
            android:text="@string/Cancel"
            android:textColor="#fff" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="15dp"
            android:background="#03a911"
            android:text="@string/confirm"
            android:textColor="#fff" />
    </FrameLayout>

</LinearLayout>